--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,24 +6,7 @@
 				<p>Adicione os usuarios para a API</p>
 				<hr>
 
-				<% form_for(@person, { path: '', method: :post }) do |f| %>
-
-					<div class='field'>
-						<%= f.label :first_name, 'Nome' %>
-						<%= f.text_field :last_name '', class: 'form-control', required: 'required',
-						placeholder: 'Digite o nome', autocomplete: 'off' %>
-					</div>
-
-					<div class='field'>
-						<%= f.label :last_name, 'Sobrenome' %>
-						<%= f.text_field :last_name, class: 'form-control', required: 'required',
-						placeholder: 'Digite seu sobrenome', autocomplete: 'off' %>
-					</div>
-
-					<div class='field'>
-						<%= f.submit nil, class: 'btn btn-primary btn-lg top' %>
-					</div>
-				<% end %>
+				<%= render 'persons/form', person: @person %>
 			</div>
 		</div>
 	</div>
