Interactor added to the project

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,12 @@
 				<h1>Adicionar Usuario</h1>
 				<p>Adicione os usuarios para a API</p>
 				<hr>
+				
+				<div class='required-field'>
+					<div class='alert alert-info'>
+						<strong>(*)</strong> Campos requiridos
+					</div>
+				</div>
 
 				<%= render 'persons/form', person: @person %>
 			</div>
