--- a/app/views/persons/_form.html.erb
+++ b/app/views/persons/_form.html.erb
@@ -1,13 +1,13 @@
-<%= form_for(@person, { path: '', method: :post }) do |f| %>
+<%= form_for(@person, { path: '', method: :post, remote: false}) do |f| %>
 
 	<div class='field'><br>
-		<%= f.label :first_name, 'Nome' %>
+		<%= f.label :first_name, 'Nome' %> (*)
 		<%= f.text_field :last_name, class: 'form-control', required: 'required',
 		placeholder: 'Digite o nome', autocomplete: 'off' %>
 	</div>
 
 	<div class='field'><br>
-		<%= f.label :last_name, 'Sobrenome' %>
+		<%= f.label :last_name, 'Sobrenome' %> (*)
 		<%= f.text_field :last_name, class: 'form-control', required: 'required',
 		placeholder: 'Digite seu sobrenome', autocomplete: 'off' %>
 	</div>
