--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,9 +2,13 @@
 	<div class='row'>
 		<div class='col-md-12'>
 			<div class='col-md-8 col-md-offset-2'>
-				<h1>Adicionar Usuario</h1>
-				<p>Adicione os usuarios para a API</p>
-				<hr>
+
+				<div class='panel panel-default'>
+					<div class='panel-body'>
+						<h1 class='bold'>Adicionar Usuario</h1>
+						<p>Adicione os usuarios para a API</p>
+					</div>
+				</div>
 				
 				<div class='required-field'>
 					<div class='alert alert-info'>
@@ -12,7 +16,17 @@
 					</div>
 				</div>
 
-				<%= render 'persons/form', person: @person %>
+				<div class='panel panel-default'>
+					<div class='panel-body'>
+						<% if notice %>
+							<div class='alert alert-success'>
+								<p><%= notice %></p>
+							</div>
+						<% end %>
+
+						<%= render 'persons/form', person: @person %>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
