--- a/app/views/persons/_form.html.erb
+++ b/app/views/persons/_form.html.erb
@@ -2,7 +2,7 @@
 
 	<div class='field'><br>
 		<%= f.label :first_name, 'Nome' %> (*)
-		<%= f.text_field :last_name, class: 'form-control', required: 'required',
+		<%= f.text_field :first_name, class: 'form-control', required: 'required',
 		placeholder: 'Digite o nome', autocomplete: 'off' %>
 	</div>
 
@@ -12,7 +12,7 @@
 		placeholder: 'Digite seu sobrenome', autocomplete: 'off' %>
 	</div>
 
-	<div class='field'>
-		<%= f.submit nil, class: 'btn btn-primary btn-lg top' %>
+	<div class='field'><br>
+		<%= f.submit 'Cadastrar', class: 'btn btn-primary btn-lg top' %>
 	</div>
 <% end %>
