--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,21 @@
 <html lang="pt-BR">
   <head>
     <title>Desafio Estudar | Renato Franco</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <style type="text/css"><%= yield :css %></style>
+    <script type="text/javascript"><%= yield :js %></script>
+    <script src="https://kit.fontawesome.com/5165849ba2.js" crossorigin="anonymous"></script>
   </head>
-  <body class="<%= controller.controller_name %>" data-spy='scroll'>
-    <%= yield %>
+  <body
+    class="<%= controller.controller_name %>"
+    data-spy='scroll'>
+    <%= render partial: 'layouts/header' %>
+      <%= yield %>
+    <%= render partial: 'layouts/footer' %>
   </body>
 </html>
