--- a/app/views/persons/_form.html.erb
+++ b/app/views/persons/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@person, { path: '', method: :post, remote: false}) do |f| %>
+<%= form_for(person, { path: '', method: :post, remote: false}) do |f| %>
 
 	<div class='field'><br>
 		<%= f.label :first_name, 'Nome' %> (*)
