--- a/app/views/persons/_form.html.erb
+++ b/app/views/persons/_form.html.erb
@@ -1,18 +1,21 @@
 <%= form_for(person, { path: '', method: :post, remote: false}) do |f| %>
 
 	<div class='field'><br>
-		<%= f.label :first_name, 'Nome' %> (*)
+		<%= f.label :first_name, 'Nome' %> (*) <br>
+		<small>Preencha seu nome</small>
 		<%= f.text_field :first_name, class: 'form-control', required: 'required',
 		placeholder: 'Digite o nome', autocomplete: 'off' %>
 	</div>
 
 	<div class='field'><br>
-		<%= f.label :last_name, 'Sobrenome' %> (*)
+		<%= f.label :last_name, 'Sobrenome' %> (*) <br>
+		<small>Preencha seu sobrenome</small>
 		<%= f.text_field :last_name, class: 'form-control', required: 'required',
 		placeholder: 'Digite seu sobrenome', autocomplete: 'off' %>
 	</div>
 
 	<div class='field'><br>
-		<%= f.submit 'Cadastrar', class: 'btn btn-primary btn-lg top' %>
+		<%= f.submit 'Cadastrar', 
+			class: 'btn btn-primary btn-lg top' %>
 	</div>
 <% end %>
